--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "pages": [
+    "pages/search/search",
     "pages/index/index",
-    "pages/logs/logs",
-    "pages/search/search"
+    "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "light",
