全面测试代码

--- a/project.config.json
+++ b/project.config.json
@@ -22,7 +22,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.2.5",
-	"appid": "wx5dd741a9481a16a9",
+	"appid": "wxad32424c8322b83a",
 	"projectname": "search",
 	"debugOptions": {
 		"hidedInDevtools": []
